# CG_Engine_old

./: .gitignore  CG_Engine.sln  CG_Implementation.psess  CMakeLists.txt  Readme.txt
CG_Engine/: CG_Data.cpp  CG_Data.h  CG_Engine.cpp  CG_Engine.h  CG_Engine.vcxproj  CG_Engine.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Cubemap.cpp  Cubemap.h  Entity.cpp  Entity.h  File_IO.cpp  File_IO.h  ModelLoader.cpp  ModelLoader.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemFShader.glsl  ParticleSystemVShader.glsl  PostProcessing.cpp  PostProcessing.h  PostprocessingF.glsl  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  Time.cpp  Time.h  glad.c  ~AutoRecover.CG_Engine.vcxproj
CG_Implementation/: CG_Implementation.cpp  CG_Implementation.h  CG_Implementation.vcxproj  CG_Implementation.vcxproj.filters  RiggedDragonF.glsl  RiggedDragonV.glsl  Thumbs.db  f.glsl  groundF.glsl  groundV.glsl  guiF.glsl  kitchenF.glsl  kitchenV.glsl  main.cpp  nanosuitF.glsl  nanosuitV.glsl  skyboxV.glsl  v.glsl  waterF.glsl  waterV.glsl  ~AutoRecover.CG_Implementation.vcxproj
Debug/: CG_Implementation.ilk
GLFW-3.2.1/: GLFW-3.2.1.vcxproj  GLFW-3.2.1.vcxproj.filters  ReadMe.txt
New folder/: CG_Data.cpp  CG_Data.h  Entity.cpp  File_IO.cpp  Shader.cpp  TupleUtil.h
Release/: CG_Implementation.iobj  CG_Implementation.ipdb  GLFW-3.2.1.lib
libs/: CG_Engine_x64.lib  CG_Engined_x64.lib  CG_Engined_x86.lib  glfw-3.2.1d2_x64.lib
libs13/: CG_Engined_x64.lib
libs_13/: CG_Engine_x86.lib  CG_Engined_x64.lib
libs_17/: CG_Engine_x86.lib  (+1 more)
(+198 files in other folders)
